# Lupin

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
config/: ntuh.py
src/: entry_auto_registry.py  entry_check_registry.py  entry_usr_data.py
src/register/: base.py  ntuh.py
src/utils/: captcha.py  utility.py
src/utils/action/: usr.py
src/utils/struct/: personal_info.py  reserve_info.py
webdriver/: factory.py
webdriver/chrome/: version.txt
